load and display a webp file from the zip

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
             </div>
             <div class="mx-auto col-12 col-lg-8 row">
             <p>TODO</p>
+            <div class="col-12 mt-0 mb-2">
+                <input type="file" class="custom-file-input" id="upload-zip"
+                                                             accept=".zip,.ZIP"
+                                                             multiple>
+                <label class="custom-file-label" for="upload-zip">Upload Zipped WebP Stack(s)</label>
+            </div>
             </div>
         </div>
     </div>
