Take URL list in a file or remote file form

--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
                 <h4>Description</h4>
             </div>
             <div class="mx-auto col-12 col-lg-8 row">
-            <p>TODO</p>
+            <p>You can upload one or more Zip files or upload a text file with URLs to one or more Zip files,
+            with one URL per line. Each Zip file should be an image stack of WebP files.</p>
+            <p>
+            Playback speed and volume rendering controls coming soon :)
+            </p>
             <div class="col-12 mt-0 mb-2">
                 <input type="file" class="custom-file-input" id="upload-zip"
-                                                             accept=".zip,.ZIP"
+                                                             accept=".zip,.ZIP,.txt,.TXT"
                                                              multiple>
-                <label class="custom-file-label" for="upload-zip">Upload Zipped WebP Stack(s)</label>
+                <label class="custom-file-label" for="upload-zip">Upload Zipped WebP Stack(s) or URL List</label>
             </div>
             </div>
         </div>
