add link tweak html

--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                 change Chrome's WebGL backend (ANGLE) to use OpenGL instead of DirectX11.
                 This will provide a more direct mapping from the application code to the
                 graphics driver, resulting in better performance and reduced overhead.
-                You can change this flag <a href="chrome://flags/#use-angle">here</a>
-                by setting it to OpenGL.
+                You can change this flag <a href="chrome://flags/#use-angle">here</a> by setting it to OpenGL.
             </div>
         </div>
     </div>
