add github link

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 Better playback speed and volume rendering controls coming soon, along with better
                 on-demand streaming and loading feedback for very large time series :)
                 </p>
+                <p>Get the code on <a href="https://github.com/Twinklebear/webgl-volume-animation">Github</a>!</p>
                 <div class="mx-auto col-12 mt-0 mb-2">
                     <input type="file" class="custom-file-input" id="upload-zip"
                                                                  accept=".zip,.ZIP,.txt,.TXT"
@@ -91,11 +92,13 @@
                 <h4>Note for Windows Users</h4>
             </div>
             <div class="mx-auto col-12 col-lg-8 row">
+                <p>
                 If you see crashes, poor performance or high memory use on Windows you can
                 change Chrome's WebGL backend (ANGLE) to use OpenGL instead of DirectX11.
                 This will provide a more direct mapping from the application code to the
                 graphics driver, resulting in better performance and reduced overhead.
                 You can change this flag <a href="chrome://flags/#use-angle">here</a> by setting it to OpenGL.
+                </p>
             </div>
         </div>
     </div>
